# python-ngspice

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  test.yml
ngspice/: NgspiceSession.cpp  NgspiceSession.h  __init__.py  data.py  ngspice.pyx  testing.py  util.py
tests/: __init__.py  conftest.py  test_run.py  test_session.py  util.py
tests/circuits/: test_numeric.py
tests/solution/: test_axes.py  test_data.py
