[build-system]
requires = [
    "setuptools>=60.9.3",
    "setuptools_scm>=6.2",
    "wheel>=0.36",
    "cython>=0.29.28",
    "numpy>=1.20"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ngspice/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.doc8]
# Documentation line length consistent with Black, and roughly maximum to avoid horizontal
# scrollbars appearing in code/preformatted blocks.
max-line-length = 88
