[metadata]
name = ngspice
author = Sean Leavey
author_email = ngspice@attackllama.com
license = BSD 3-Clause License
license_files =
    LICENSE
url = https://github.com/SeanDS/pyngspice
description = Python interface to Ngspice, a mixed-level/mixed-signal circuit simulator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Natural Language :: English
    License :: OSI Approved :: BSD Licence
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/SeanDS/pyngspice/issues
    Source Code = https://github.com/SeanDS/pyngspice/

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.20

[options.package_data]
ngspice = ngspice.pyx

[options.extras_require]
dev =
    build
    pytest
